--- a/todoapp/templates/todoapp/todo.html
+++ b/todoapp/templates/todoapp/todo.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <title>Todo-App</title>
+
 </head>
 <body>
     
@@ -61,7 +62,7 @@
             {% endif %}
 
             <td>
-              
+              <a href="{% url 'edit' todo.id %}"><button type="submit"  class="btn btn-danger">Edit</button></a>
               <a href="{% url 'delete' todo.id %}"><button type="submit" class="btn btn-danger">Delete</button></a>
               <a href="{% url 'update' todo.id %}"><button type="submit" class="btn btn-success ms-1">Finished</button></a>
             </td>
@@ -80,7 +81,10 @@
       
     </section>
 
+    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
 </body>
 </html>
