--- a/todoapp/templates/todoapp/todo.html
+++ b/todoapp/templates/todoapp/todo.html
@@ -62,9 +62,9 @@
             {% endif %}
 
             <td>
-              <a href="{% url 'edit' todo.id %}"><button type="submit"  class="btn btn-danger">Edit</button></a>
-              <a href="{% url 'delete' todo.id %}"><button type="submit" class="btn btn-danger">Delete</button></a>
-              <a href="{% url 'update' todo.id %}"><button type="submit" class="btn btn-success ms-1">Finished</button></a>
+              <a href="{% url 'edit' todo.id %}"><button type="submit"  class="btn btn-warning mx-2">Edit</button></a>
+              <a href="{% url 'delete' todo.id %}"><button type="submit" class="btn btn-danger mx-2">Delete</button></a>
+              <a href="{% url 'update' todo.id %}"><button type="submit" class="btn btn-success mx-2">Finished</button></a>
             </td>
           </tr>
           {% endfor %}
