--- a/todoapp/templates/todoapp/register.html
+++ b/todoapp/templates/todoapp/register.html
@@ -1,22 +1,7 @@
+{% extends "todoapp/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-
-<html lang="en" dir="ltr">
-  <head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!--Font awesome-->
-    <link rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-    
-    <title>Register</title>
-   </head>
-<body style="background-color:#bcebf7;">
-  <section class="vh-100" >
+ {% block content %}
+  <section class="vh-100 animate-bottom" style="display:none;" id="myDiv">
     <div class="container py-5 h-100  ">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col col-xl-10">
@@ -47,7 +32,7 @@
                       {% if messages %}
                         {% for message in messages %}
                           
-                          <p class="{{ message.tags }}">{{message}}</p> 
+                          <p class="{{ message.tags }}" style='color:red;'>{{message}}</p> 
                         {% endfor %}
                       {% endif %}
                     </div>
@@ -58,25 +43,25 @@
 
                       {% csrf_token %}
 
-                      <div class="form-outline mb-4">
+                      <div class="form-outline mb-4 text-start">
                         <label class="form-label" for="form2Example17">Username:</label>
                         <input type="text"  name="username" class="form-control form-control-lg border border-4" required />
                         
                       </div>
 
-                      <div class="form-outline mb-4">
+                      <div class="form-outline mb-4 text-start">
                         <label class="form-label" for="form2Example17">Email:</label>
                         <input type="email"  name="email" class="form-control form-control-lg border border-4" required />
                         
                       </div>
     
-                      <div class="form-outline mb-4">
+                      <div class="form-outline mb-4 text-start">
                         <label class="form-label" for="form2Example27">Password:</label>
                         <input type="password" name="password" class="form-control form-control-lg border border-4" required />
                         
                       </div>
 
-                      <div class="form-outline mb-4">
+                      <div class="form-outline mb-4 text-start">
                         <label class="form-label" for="form2Example27">Re-enter the Password:</label>
                         <input type="password" name="password2" class="form-control form-control-lg border border-4" required />
                         
@@ -104,9 +89,5 @@
       </div>
     </div>
   </section>
+  {% endblock content %}
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
-
-
-</html>
