--- a/todoapp/templates/todoapp/task-by-speech.html
+++ b/todoapp/templates/todoapp/task-by-speech.html
@@ -1,21 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Bootstrap-->
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!--Font awesome-->
-    <link rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <title>Add-task-by-speech</title>
-
-</head>
-<body>
-    
-    <section class="py-5 text-center container">
+{% extends "todoapp/base.html" %}
+    {% block content %}
+    <section class="py-5 text-center container animate-bottom" style="display:none;" id="myDiv" >
       
       
       <div class="row py-lg-5">
@@ -42,11 +27,6 @@
 
       
     </section>
-
+    {% endblock content %}
     
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
-</body>
-</html>
