--- a/todoapp/templates/todoapp/todo.html
+++ b/todoapp/templates/todoapp/todo.html
@@ -1,21 +1,7 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Bootstrap-->
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <!--Font awesome-->
-    <link rel="stylesheet" 
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <title>Todo-App</title>
-
-</head>
-<body>
+{% extends "todoapp/base.html" %}
+    {% block content %}
     
-    <section class="py-5 text-center container">
+    <section class="py-5 text-center container animate-bottom" style="display:none;" id="myDiv">
       <div class="text-start">
         <a href="{% url 'logout' %}"><button style="background: firebrick; color: white;" type="submit" class="btn btn-primary "><i class="fa-solid fa-arrow-left"></i> Logout Session</button><a>
       </div>
@@ -110,9 +96,6 @@
           } 
       }
     </script>
+    {% endblock content %}
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
-</body>
-</html>
