Template inheritance added

--- a/todoapp/templates/todoapp/register.html
+++ b/todoapp/templates/todoapp/register.html
@@ -1,7 +1,10 @@
 {% extends "todoapp/base.html" %}
 {% load static %}
+{% block title %}TodoApp-Register{% endblock title %}
  {% block content %}
-  <section class="vh-100 animate-bottom" style="display:none;" id="myDiv">
+ <body  style="background-color:#bcebf7;">
+  
+  <section class="vh-100 "  >
     <div class="container py-5 h-100  ">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col col-xl-10">
@@ -89,5 +92,10 @@
       </div>
     </div>
   </section>
+  
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+</body>
   {% endblock content %}
 
