--- a/todoapp/templates/todoapp/base.html
+++ b/todoapp/templates/todoapp/base.html
@@ -1,6 +1,6 @@
-
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,21 +11,17 @@
     <!--Font awesome-->
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Add-task-by-speech</title>
-    <link rel="stylesheet" href="{% static "todoapp/css/loader.css" %}">
+    <title>{% block title %}{% endblock title %}</title>
+    {% block headContent %}{% endblock headContent %}
+    
     
     
 
 </head>
-<body onload="myFunction()" style="background-color:#bcebf7;">
-    <div id="loader"></div>
 
-    {% block content %}
-    {% endblock content %}
 
-    <script src="{% static "todoapp/js/loader.js" %}"></script>
+{% block content %}
+{% endblock content %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
-</body>
 </html>
