--- a/todoapp/templates/todoapp/task-by-speech.html
+++ b/todoapp/templates/todoapp/task-by-speech.html
@@ -1,5 +1,12 @@
 {% extends "todoapp/base.html" %}
+{% load static %}
+    {% block title %}Add-task-by-Speech{% endblock title %}
+    {% block headContent %}
+      <link rel='stylesheet' href="{% static "todoapp/css/loader.css" %}">
+    {% endblock headContent %}
     {% block content %}
+    <body onload="myFunction()" style="background-color:#bcebf7;">
+      <div id="loader"></div>
     <section class="py-5 text-center container animate-bottom" style="display:none;" id="myDiv" >
       
       
@@ -27,6 +34,11 @@
 
       
     </section>
+    <script src="{% static "todoapp/js/loader.js" %}"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+</body>
     {% endblock content %}
     
     
