--- a/todoapp/templates/todoapp/todo.html
+++ b/todoapp/templates/todoapp/todo.html
@@ -1,7 +1,10 @@
 {% extends "todoapp/base.html" %}
+
+    {% block title %}Todo List{% endblock title %}
     {% block content %}
-    
-    <section class="py-5 text-center container animate-bottom" style="display:none;" id="myDiv">
+    <body  style="background-color:#bcebf7;">
+      
+    <section class="py-5 text-center container " >
       <div class="text-start">
         <a href="{% url 'logout' %}"><button style="background: firebrick; color: white;" type="submit" class="btn btn-primary "><i class="fa-solid fa-arrow-left"></i> Logout Session</button><a>
       </div>
@@ -96,6 +99,11 @@
           } 
       }
     </script>
+    
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+</body>
     {% endblock content %}
 
     
